--- a/DailyReport.Application/DailyReport.Application.csproj
+++ b/DailyReport.Application/DailyReport.Application.csproj
@@ -20,4 +20,9 @@
     <ProjectReference Include="..\DailyReport.Domain\DailyReport.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Report\Models\" />
+    <Folder Include="Features\Report\Queries\" />
+  </ItemGroup>
+
 </Project>
